--- a/css/main.css
+++ b/css/main.css
@@ -131,6 +131,7 @@ button:focus {
     margin-left: 10px;
     letter-spacing: 0.05em;
     transition: 0.3s;
+    cursor: default;
 }
 
 .nav-button {
@@ -360,6 +361,139 @@ button:focus {
     height: 40px;
 }
 
+.slide5__header {
+    margin: 55px 0 10px;
+    position: relative;
+    left: -45px;
+}
+
+.checkbox {
+    border: 2px solid #fff;
+    padding: 15px;
+    margin: 40px 25px 0;
+    width: 200px;
+    height: 50px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: flex-end;
+    transition: 0.3s;
+    position: relative;
+}
+
+.check-checkbox {
+    border: 2px solid #0f33ff;
+    background-color: #0f33ff;
+    transition: 0.3s;
+}
+
+.checkbox-header {
+    font-weight: 400;
+    font-size: 18px;
+    font-family: 'Proxima', sans-serif;
+    color: #fff;
+    margin: 0;
+}
+
+.checkbox input[type="checkbox"] {
+    opacity: 0;
+    position: absolute;
+    width: 200px;
+    height: 50px;
+}
+
+.checkbox label::after {
+    content: "";
+    display: inline-block;
+    height: 16px;
+    width: 19px;
+    border-left: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transform: rotate(-45deg);
+    position: absolute;
+    left: 20px;
+    top: 10px;
+}
+
+.checkbox label {
+    position: relative;
+}
+
+.checkbox label::after {
+    position: absolute;
+}
+
+.checkbox label::after {
+    left: -160px;
+    top: -10px;
+}
+
+.checkbox input[type="checkbox"] + label::after {
+    content: none;
+}
+
+.checkbox input[type="checkbox"]:checked + label::after {
+    content: "";
+}
+
+.name, .mail {
+    margin: 30px;
+}
+
+.name-input, .mail-input {
+    font-family: 'Proxima', sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+    background-color: #000;
+    color: #fff;
+    outline: 0;
+    border: 0;
+    border-bottom: 1px solid #fff;
+}
+
+.name-input::placeholder {
+    color: #fff;
+}
+
+.mail-input::placeholder {
+    color: #fff;
+}
+
+.request-button {
+    width: 400px;
+    height: 50px;
+    margin-top: 40px;
+}
+
+.nav-line {
+    border-left: 1px solid #242424;
+    height: 500px;
+    position: absolute;
+    top: 90px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    padding: 0;
+}
+
+.number-slide {
+    list-style: none;
+    position: relative;
+    left: -11px;
+    color: #757474;
+    font-weight: 300;
+    transition: 0.3s;
+}
+
+.number-active {
+    transition: 0.3s;
+    color: #e6e5e5;
+    font-weight: 400;
+    letter-spacing: 0.4em;
+    left: -14px;
+    cursor: default;
+}
 
 @media (max-width: 992px) {
     .slick-slide {
