--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ button:focus {
 
 .slide {
     background-color: #000;
+    display: none;
 }
 
 .slide-header {
@@ -137,6 +138,7 @@ button:focus {
 .nav-button {
     position: relative;
     left: 30px;
+    transition: 0.3s;
 }
 
 .hire-button {
@@ -497,12 +499,8 @@ button:focus {
     cursor: default;
 }
 
-.slide1 {
+.slide-active {
     display: block;
-}
-
-.slide2, .slide3, .slide4, .slide5 {
-    display: none;
 }
 
 @media (max-width: 992px) {
